--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "antd": "^6.0.0",
     "axios": "^1.13.2",
     "classnames": "^2.5.1",
+    "pdfjs-dist": "^4.4.168",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-pdf": "^10.2.0"
